--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,29 @@
   "manifest_version": 3,
   "action": {
     "default_popup": "popup.html",
-    "default_icon": "icon.png"
+    "default_icon": {
+      "16": "icon16.png",
+      "32": "icon.png",
+      "48": "icon.png",
+      "128": "icon.png"
+    }
+  },
+  "icons": {
+    "16": "icon16.png",
+    "32": "icon.png",
+    "48": "icon.png",
+    "128": "icon.png"
   },
   "permissions": [
     "storage"
+  ],
+  "host_permissions": [
+    "https://script.google.com/*"
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["i18n.json"],
+      "matches": ["<all_urls>"]
+    }
   ]
 }
